--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Website title</title>
 </head>
 <body>
     <h1>This is my github thing</h1>
+    <p>here is some text</p>
 </body>
 </html>
