--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>This is my github thing</h1>
     <p>here is some text</p>
+    <button onclick="countUp()">Click here</button>
+    <div id="num"></div>
+    <script src="script.js"></script>
 </body>
 </html>
