--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>This is my github thing</h1>
     <p>here is some text</p>
-    <button onclick="countUp()">Click here</button>
+    <button onclick="countUp()" class="btns">Click here</button>
     <div id="num"></div>
     <script src="script.js"></script>
 </body>
