--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		</script>
   </head>
   <body>
-    <script type="module" src="index.js"></script>
+	<h1>Wow! That's pretty cool!</h1>
+    	<script type="module" src="index.js"></script>
   </body>
 </html>
