--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Getting Started with Three.js</title>
     <style>
-      body {
+      	body {
+        	margin: 0;
+      	}
+	h1 {
+        text-align: center;
+        background-color: tan;
         margin: 0;
-      }
+        padding: 5px;
+     	 }
+	
     </style>
     <script type="importmap">
 			{
